--- a/less/snake.desktop.less
+++ b/less/snake.desktop.less
@@ -358,6 +358,13 @@
 						color: #333;
 					}
 				}
+
+				p {
+					.jianzhi();
+					.font(25px);
+					color: #e8392a;
+					text-align: center;
+				}
 			}
 
 			.foot-section {
