--- a/templates/desktop.hbs
+++ b/templates/desktop.hbs
@@ -66,12 +66,19 @@
                     <div class="tips">
                         <p>“参与奖”抱回家：</p>
                         <p>一张50元我买网红包</p>
-                        <p>继续冲击贪吃大奖吧！</p>
                     </div>
+                    <p>继续冲击贪吃大奖吧！</p>
                 </div>
                 <div class="foot-section">
-                    <button class="snake-modal-btn restart">再来一局</button>
-                    <button class="snake-modal-btn share">告诉朋友们</button>
+                    <button class="snake-modal-btn restart">
+                        再来一局
+                    </button>
+                    <button class="snake-modal-btn share">
+                        告诉朋友们
+                    </button>
+                    <p style="text-align: right; margin-bottom: 0px;">
+                        分享就有18元牛奶产品礼券抱回家哦！
+                    </p>
                 </div>
             </div>
         </div>
