--- a/public/css/snake.desktop.css
+++ b/public/css/snake.desktop.css
@@ -29,7 +29,7 @@
 }
 .snake-container-wrap {
   background-image: url(../images/resources.png);
-  background-position: 0px -2946px;
+  background-position: 0px -2928px;
   height: 720px;
   display: block;
   margin-left: auto;
@@ -56,7 +56,7 @@
 }
 .snake-container-wrap .bottom {
   background-image: url(../images/resources.png);
-  background-position: 0px -1041px;
+  background-position: 0px -1023px;
   width: 1156px;
   height: 323px;
   position: absolute;
@@ -82,7 +82,7 @@
 }
 .snake-container-wrap .snake-container .scorebar {
   background-image: url(../images/resources.png);
-  background-position: 0px -1374px;
+  background-position: 0px -1356px;
   width: 158px;
   height: 454px;
   color: #fcf1f1;
@@ -99,7 +99,7 @@
 }
 .snake-container-wrap .snake-container .control-bar {
   background-image: url(../images/resources.png);
-  background-position: 0px -1838px;
+  background-position: 0px -1820px;
   width: 158px;
   height: 454px;
 }
@@ -116,26 +116,26 @@
   outline: none;
   cursor: pointer;
   background-image: url(../images/resources.png);
-  background-position: 0px -377px;
+  background-position: 0px -359px;
   width: 128px;
   height: 128px;
   background-color: transparent;
 }
 .snake-container-wrap .snake-container .control-bar #control:active {
   background-image: url(../images/resources.png);
-  background-position: 0px -515px;
+  background-position: 0px -497px;
   width: 128px;
   height: 128px;
 }
 .snake-container-wrap .snake-container .control-bar #control.pause {
   background-image: url(../images/resources.png);
-  background-position: 0px -101px;
+  background-position: 0px -83px;
   width: 128px;
   height: 128px;
 }
 .snake-container-wrap .snake-container .control-bar #control.pause:active {
   background-image: url(../images/resources.png);
-  background-position: 0px -239px;
+  background-position: 0px -221px;
   width: 128px;
   height: 128px;
 }
@@ -173,7 +173,7 @@
 .snake-container-wrap .snake-container .content .canvas {
   position: absolute;
   background-image: url(../images/resources.png);
-  background-position: 0px -2302px;
+  background-position: 0px -2284px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
   width: 634px;
   height: 634px;
@@ -281,13 +281,13 @@
 }
 .snake-container-wrap .gameover .snake-modal .tip-section .nian-happy {
   background-image: url(../images/resources.png);
-  background-position: 0px -653px;
+  background-position: 0px -635px;
   width: 192px;
   height: 184px;
 }
 .snake-container-wrap .gameover .snake-modal .tip-section .nian-sad {
   background-image: url(../images/resources.png);
-  background-position: 0px -847px;
+  background-position: 0px -829px;
   width: 192px;
   height: 184px;
 }
@@ -324,8 +324,8 @@
 .snake-container-wrap .gameover .snake-modal .courage-section .redbag {
   background-image: url(../images/resources.png);
   background-position: 0px 0px;
-  width: 75px;
-  height: 91px;
+  width: 60px;
+  height: 73px;
 }
 .snake-container-wrap .gameover .snake-modal .courage-section .tips p {
   padding-left: 20px;
@@ -336,6 +336,14 @@
   line-height: 20px;
   text-align: left;
   color: #333;
+}
+.snake-container-wrap .gameover .snake-modal .courage-section p {
+  font-family: "jianzhi", "微软雅黑";
+  font-weight: normal;
+  font-size: 25px;
+  line-height: 25px;
+  color: #e8392a;
+  text-align: center;
 }
 .snake-container-wrap .gameover .snake-modal .foot-section {
   text-align: center;
