修改模板当中js、css路径

--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>snake demo</title>
     {{#if DEBUG}}
-    <link rel="stylesheet" href="/css/snake.mobile.css" type="text/css">
+    <link rel="stylesheet" href="css/snake.mobile.css" type="text/css">
     {{else}}
-    <link rel="stylesheet" href="/css/snake.mobile.min.css" type="text/css">
+    <link rel="stylesheet" href="css/snake.mobile.min.css" type="text/css">
     {{/if}}
 </head>
 <body style="margin: 0px;">
@@ -33,15 +33,15 @@
 
     <p style="width: 100%; height: 300px;"></p>
 
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.hammer.min.js">
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.hammer.min.js">
     </script>
-    <script type="text/javascript" src="/js/async.js"></script>
+    <script type="text/javascript" src="js/async.js"></script>
 
     {{#if FEEDBACK}}
-    <script type="text/javascript" src="/js/snake.mobile.js"></script>
+    <script type="text/javascript" src="js/snake.mobile.js"></script>
     {{else}}
-    <script type="text/javascript" src="/js/snake.mobile.min.js">
+    <script type="text/javascript" src="js/snake.mobile.min.js">
     </script>
     {{/if}}
 </body>
