--- a/templates/desktop.hbs
+++ b/templates/desktop.hbs
@@ -5,20 +5,20 @@
     <title>snake demo</title>
     <!-- 游戏样式 -->
     {{#if DEBUG}}
-    <link rel="stylesheet" href="/css/snake.desktop.css" type="text/css">
+    <link rel="stylesheet" href="css/snake.desktop.css" type="text/css">
     {{else}}
-    <link rel="stylesheet" href="/css/snake.desktop.min.css" type="text/css">
+    <link rel="stylesheet" href="css/snake.desktop.min.css" type="text/css">
     {{/if}}
 
     <!-- 为适配IE8使用flashcanvas提供canvas功能 -->
     <!--[if lt IE 9]>
-    <script type="text/javascript" src="/js/flashcanvas.js"></script>
+    <script type="text/javascript" src="js/flashcanvas.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css"  href="../css/common.css">
+    <link rel="stylesheet" type="text/css"  href="css/common.css">
 
     <!--[if IE 6]>
-    <script type="text/javascript" src="../js/DD_belatedPNG_0.0.8a-min.js"></script>
+    <script type="text/javascript" src="js/DD_belatedPNG_0.0.8a-min.js"></script>
     <script>
         DD_belatedPNG.fix('*');
     </script>
@@ -159,24 +159,23 @@
         </div>
     </div>
 
-
     {{> friends}}
     {{> login}}
 
 
     <!-- 依赖的代码库 -->
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.hammer.min.js"></script>
-    <script type="text/javascript" src="/js/async.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.hammer.min.js"></script>
+    <script type="text/javascript" src="js/async.js"></script>
 
-    <script type="text/javascript" src="/js/jquery-foxibox-0.2.min.js">
+    <script type="text/javascript" src="js/jquery-foxibox-0.2.min.js">
     </script>
 
     <!-- 功能代码 -->
     {{#if DEBUG}}
-    <script type="text/javascript" src="/js/snake.desktop.js"></script>
+    <script type="text/javascript" src="js/snake.desktop.js"></script>
     {{else}}
-    <script type="text/javascript" src="/js/snake.desktop.min.js"></script>
+    <script type="text/javascript" src="js/snake.desktop.min.js"></script>
     {{/if}}
 
     {{#if FEEDBACK}}
