--- a/less/snake.desktop.less
+++ b/less/snake.desktop.less
@@ -324,16 +324,16 @@
 				.tips {
 					text-align: center;
 
-					span {
-						padding: 5px 0px 20px;
+					p {
+						padding: 5px 0px 10px;
 						.jianzhi();
 						.font(25px);
 						text-align: center;
 						color: #e8392a;
-					}
 
-					.score {
-						.font(50px);
+						&.score {
+							.font(50px);
+						}
 					}
 				}
 			}
