--- a/public/css/snake.desktop.css
+++ b/public/css/snake.desktop.css
@@ -302,8 +302,8 @@
 .snake-container-wrap .gameover .snake-modal .tip-section .tips {
   text-align: center;
 }
-.snake-container-wrap .gameover .snake-modal .tip-section .tips span {
-  padding: 5px 0px 20px;
+.snake-container-wrap .gameover .snake-modal .tip-section .tips p {
+  padding: 5px 0px 10px;
   font-family: "jianzhi", "微软雅黑";
   font-weight: normal;
   font-size: 25px;
@@ -311,7 +311,7 @@
   text-align: center;
   color: #e8392a;
 }
-.snake-container-wrap .gameover .snake-modal .tip-section .tips .score {
+.snake-container-wrap .gameover .snake-modal .tip-section .tips p.score {
   font-size: 50px;
   line-height: 50px;
 }
