--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -45,6 +45,10 @@
             <button>开始游戏</button>
         </div>
 
+        <div class="error-modal hide">
+            <p>加载失败</p>
+        </div>
+
         <div class="share-modal hide">
             <p>恭喜您！</p>
             <p>已获得50元我买网红包</p>
