修改静态文件路径，修改图片尺寸

--- a/less/snake.desktop.less
+++ b/less/snake.desktop.less
@@ -381,9 +381,9 @@
 	}
 
 	.rules {
-		top: 50%;
-		bottom: none;
-		margin-top: -@wrapperHeight/2 + 10;
+		height: auto;
+		top: 20px;
+		bottom: 20px;
 
 		.snake-modal {
 			font-family: "微软雅黑";
