--- a/templates/desktop.hbs
+++ b/templates/desktop.hbs
@@ -14,7 +14,7 @@
 
     <!-- 为适配IE8使用flashcanvas提供canvas功能 -->
     <!--[if lt IE 9]>
-    <script type="text/javascript" src="js/flashcanvas.js"></script>
+    <script type="text/javascript" src="Public/game/js/flashcanvas.js"></script>
     <![endif]-->
 
     <!--[if IE 6]>
@@ -44,7 +44,8 @@
                     <h2 class='total'>0</h2>
                 </div>
             </div><div class='content'>
-                <canvas class='canvas' id="snake" width="634" height="634"></canvas>
+                <canvas class='canvas' id="snake" width="500" height="500">
+                </canvas>
             </div><div class='couplet control-bar'>
                 <button class='couplet-head' id="control"></button>
                 <div class="title-pane">
@@ -167,14 +168,14 @@
 
 
     <!-- 依赖的代码库 -->
-    <script type="text/javascript" src="Public/game/js/jquery.min.js">
+    <script type="text/javascript" src="js/jquery.min.js">
+    </script>
+    <script type="text/javascript" src="js/jquery-foxibox-0.2.min.js">
     </script>
     <script type="text/javascript" src="Public/game/js/jquery.hammer.min.js">
     </script>
     <script type="text/javascript" src="Public/game/js/async.js"></script>
 
-    <script type="text/javascript" src="Public/game/js/jquery-foxibox-0.2.min.js">
-    </script>
 
     <!-- 功能代码 -->
     {{#if DEBUG}}
