--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -81,7 +81,7 @@
 
     <p style="text-align: center;width: 100%; height: 300px;line-height: 300px;color: #b20">网页其他内容</p>
 
-    <script type="text/javascript" src="Public/game/js/jquery.min.js">
+    <script type="text/javascript" src="js/jquery.min.js">
     </script>
     <script type="text/javascript" src="Public/game/js/jquery.hammer.min.js">
     </script>
