--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -35,7 +35,8 @@
                 <button class='control'></button>
         	</div>
             <div class='content'>
-                <canvas class='canvas' id="snake" width="450" height="450"></canvas>
+                <canvas class='canvas' id="snake" width="500" height="500">
+                </canvas>
             </div>
         </div>
 
