--- a/less/snake.desktop.less
+++ b/less/snake.desktop.less
@@ -202,11 +202,11 @@
 			text-align: center;
 			margin-bottom: 0px;
 			margin-top: 0px;
-			padding: 0px 16px;
-			font-size: 60px;
-			line-height: 96px;
-			border-radius: 62px;
-			width: 400px;
+			padding: 0px;
+			font-size: 48px;
+			line-height: 72px;
+			border-radius: 36px;
+			width: 330px;
 			margin-left: -100px;
 			bottom: 18%;
 		}
