添加登录链接

--- a/templates/login.hbs
+++ b/templates/login.hbs
@@ -4,8 +4,12 @@
       <div class="tk-title"><span class="title-word-s">分享授权</span><div class="close-btn"><a href="javascript:void(-1);"><img src="../images/close.png"></a></div></div>
       <div class="tk-cont-1 clearfix">
         <p>请选择以下方式进行分享授权</p>
-        <a href="#"><img  src="../images/share-sina.png"></a>
-        <a href="#"><img src="../images/share-qq.png"></a>
+        <a href="/sina/login?form=/game/test">
+        	<img  src="../images/share-sina.png">
+        </a>
+        <a href="/qq/login?from=/game/test">
+        	<img src="../images/share-qq.png">
+        </a>
       </div>
    </div>
 </div>
