修复新手引导当中的礼品图

--- a/templates/desktop.hbs
+++ b/templates/desktop.hbs
@@ -133,7 +133,8 @@
                         </p>
                     </li>
                 </ul>
-                <img style="display: block; margin: 0 auto;" src="../images/gift.png">
+                <img style="display: block; margin: 0 auto;" 
+                     src="/Public/game/images/gift.png">
                 <h3>特别说明</h3>
                 <ul>
                     <li>
