--- a/templates/friends.hbs
+++ b/templates/friends.hbs
@@ -15,7 +15,7 @@
           <div class="tk-huanyi"><a href="javascript:;" id="dialog-huanyipi-game">换一批</a></div>
           <span id="_zl_spoke_id" class="spoke_id" style="display:none;"></span>
           <span id="_zl_invite_page" class="page" style="display:none">1</span>
-          <ul class="tk-photo" id="_dzl_intive_list">
+          <ul class="tk-photo" id="_dzl_invite_list">
           </ul>     
         </div>
        </div>
