--- a/templates/desktop.hbs
+++ b/templates/desktop.hbs
@@ -168,6 +168,17 @@
     {{> login}}
 
 
+    <div class="tk-share-alert" id="dialog-share-alert" style="min-width: 300px; position: fixed; top: 197px; left: 570px; z-index: 2001;">
+   <div class="tk-cont">
+      <div class="tk-title"><span class="title-word-s">系统提示</span><div class="close-btn-alert"><a href="javascript:;"><img src="/Public/images/close.png"></a></div></div>
+      <div class="tk-cont" style="padding:20px;min-height:80px;">
+        <div id="_alert_msg_content">至少选择一个好友</div>
+        <div style="margin-top:20px;text-align:center;"><input type="button" value="关闭" class="close-btn-alert" style="padding:5px 10px;cursor:pointer;background:#fff;border:1px solid #d2d2d2;min-width:60px;"></div>
+      </div>
+   </div>
+   </div>
+
+
     <!-- 依赖的代码库 -->
     <script type="text/javascript" src="js/jquery.min.js">
     </script>
