refine mobile version

--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="Public/game/css/snake.mobile.min.css" type="text/css">
     {{/if}}
 </head>
-<body style="margin: 0px;">
+<body style="margin: 0px; background: #e8392a">
     <div class="snake-container-wrap">
         <div class="snake-container">
         	<div class="header">
@@ -78,8 +78,6 @@
             </div>
         </div>
     </div>
-
-    <p style="text-align: center;width: 100%; height: 300px;line-height: 300px;color: #b20">网页其他内容</p>
 
     <script type="text/javascript" src="js/jquery.min.js">
     </script>
