--- a/templates/mobile.hbs
+++ b/templates/mobile.hbs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>snake demo</title>
+    <title>中粮年货贪吃达人</title>
     {{#if DEBUG}}
     <link rel="stylesheet" href="Public/game/css/snake.mobile.css" type="text/css">
     {{else}}
